# SpeechRec-numbers

./: .gitignore  EDA.ipynb  LICENSE  best_config.py  config.py  debug_mistakes.ipynb  eval.py  main.py  optuna_search.py  pyproject.toml  requirements.txt  run_optuna.sh  setup-gpu.sh  submit_best.py  train.py  train_digit_level.py
data_processor/: augmentation.py  data.py  mel.py  postprocessor.py
model/: decoder.py  digitbased.py  encoder.py  metrics.py
