[project]
name = "speechrec-numbers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jiwer>=4.0.0",
    "kaggle>=2.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=1.22.2",
    "pandas>=3.0.2",
    "scipy>=1.8.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.1.2",
    "torchaudio>=2.1.2",
    "tqdm>=4.67.3",
]
